# some_small_stereo

./: README
1920_save_pic/: 1920_save_pic.kdev4  CMakeLists.txt  save_pic.cc
1920_save_pic/.kdev4/: 1920_save_pic.kdev4
640_stereo/: 640_stereo.cc  640_stereo.kdev4  CMakeLists.txt  CMakeLists.txt~
640_stereo/.kdev4/: 640_stereo.kdev4
sgbm_test/: CMakeLists.txt  sgbm_test.cc  sgbm_test.kdev4
stereo_save_pic/: CMakeLists.txt  save_pic.cc
stereo_save_pic/.kdev4/: 1920_save_pic.kdev4
